--- a/index.html
+++ b/index.html
@@ -154,10 +154,18 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact</h2>
                     <form name="contact" method="POST" data-netlify="true">
-                     <input type="text" name="name"  placeholder="Nom">
-                     <input type="email" name="email"  placeholder="Email">
-                     <textarea name="message"  placeholder="C'est pour quoi ?"></textarea>
-                     <input type="submit" value="Envoyer">
+                        <div>
+                            <input type="text" name="name"  placeholder="Nom">
+                        </div>
+                        <div>
+                            <input type="email" name="email"  placeholder="Email">
+                        </div>    
+                        <div>
+                             <textarea name="message"  placeholder="C'est pour quoi ?"></textarea>
+                        </div>
+                        <div>
+                             <input type="submit" value="Envoyer">
+                        </div>   
                     </form>
                 </div>
             </section>
