--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         6, rue de Vermelles 62670 Mazingarbe - 03 21 25 04 74 
                         
                     </div>
-                    <p class="lead mb-5">Apprenant Dévéloppeur Web et Web Mobile de Pop School, à la recherche d'un stage de 2 mois débutant début septembre  .</p>
+                    <p class="lead mb-5">Dévéloppeur Web et Web Mobile  .</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/corentin-duriez-0a0958184/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/arcanom?tab=repositories"><i class="fab fa-github"></i></a>
